# UncertaintyCalculator

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  calculator.ipynb  main.py  pyproject.toml  uncertainty_calculator.py
.cursor/rules/: python-quality.mdc  uncertainty-calculator.mdc
.github/workflows/: ci.yml  publish.yml
examples/: calculator.ipynb  uncertainty_calculator.ipynb
src/uncertainty_calculator/: __init__.py  _types.py  calculator.py  compute.py  core.py  format.py  formatting.py  models.py  parsers.py  parsing.py  render.py  rendering.py  types.py  validation.py
tests/: __init__.py  conftest.py  input_parsers.py  legacy_calculator.py  test_calculator.py  test_compute.py  test_format.py  test_formatting.py  test_input.py  test_parsers.py  test_parsing.py  test_render.py  test_rendering.py  test_types.py  test_uncertainty_calculator.py  test_validation.py
