[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncertainty_calculator"
dynamic = ["version"]
description = "Automated error propagation for physical experiments: symbolic derivatives, uncertainty propagation, and LaTeX output for reports."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Zhaoyang Li", email = "zhaoyangli@stanford.edu" }]
keywords = [
  "uncertainty",
  "error-propagation",
  "sympy",
  "latex",
  "physics",
  "experiment",
  "differentiation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.12"
dependencies = ["sympy"]

[project.urls]
Homepage = "https://github.com/fridrichmethod/UncertaintyCalculator"
Repository = "https://github.com/fridrichmethod/UncertaintyCalculator"
Documentation = "https://github.com/fridrichmethod/UncertaintyCalculator#readme"
Issues = "https://github.com/fridrichmethod/UncertaintyCalculator/issues"

[tool.setuptools.dynamic]
version = { attr = "uncertainty_calculator.__version__" }

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-env",
  "pytest-html",
  "pytest-timeout",
  "pytest-xdist",
  "ruff",
  "mypy",
]
notebook = ["jupyter"]

[tool.ruff]
target-version = "py312"
preview = true
line-length = 100
src = ["src"]
extend-exclude = [
  ".git",
  ".hg",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "_build",
  "buck-out",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "E",    # pycodestyle
  "F",    # Pyflakes
  "I",    # isort
  "NPY",  # numpy
  "PD",   # pandas-vet
  "PERF", # perflint
  "PLE",  # pylint-error
  "RUF",  # ruff
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "UP",   # pyupgrade
]
extend-select = [
  "D",   # pydocstyle
  "W",   # pycodestyle
  "PLW", # pylint-warning
]
ignore = ["B905", "E203", "E501", "E741", "UP037", "D203", "D213"]
explicit-preview-rules = true

[tool.ruff.lint.isort]
known-first-party = ["uncertainty_calculator"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = []
builtins-ignorelist = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["F401", "RUF059"]
"tests/legacy_calculator.py" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
pretty = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = false
namespace_packages = false
enable_incomplete_feature = ["Unpack"]
disable_error_code = ["import-not-found", "import-untyped", "no-any-return"]

[[tool.mypy.overrides]]
module = ["uncertainty_calculator.*", "sympy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.legacy_calculator"
ignore_errors = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"uncertainty_calculator" = []

[tool.pytest.ini_options]
addopts = "-v -s --tb=short --strict-markers --color=yes -n auto"
testpaths = ["tests"]
pythonpath = ["src"]
env = ["TQDM_DISABLE=1"]

[tool.coverage.run]
source = ["src/uncertainty_calculator"]
omit = ["*/tests/*", "*__pycache__*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
fail_under = 0
